flutter/macos/Frameworks/EdgeVedaCore.xcframework/macos-arm64_x86_64/Headers/edge_veda.h

/* ============================================================================
 * Error Codes
 * ========================================================================= */

typedef enum {
    EV_SUCCESS = 0,                    /**< Operation successful */
    EV_ERROR_INVALID_PARAM = -1,       /**< Invalid parameter provided */
    EV_ERROR_OUT_OF_MEMORY = -2,       /**< Out of memory */
    EV_ERROR_MODEL_LOAD_FAILED = -3,   /**< Failed to load model */
    EV_ERROR_BACKEND_INIT_FAILED = -4, /**< Failed to initialize backend */
    EV_ERROR_INFERENCE_FAILED = -5,    /**< Inference operation failed */
    EV_ERROR_CONTEXT_INVALID = -6,     /**< Invalid context */
    EV_ERROR_STREAM_ENDED = -7,        /**< Stream has ended */
    EV_ERROR_NOT_IMPLEMENTED = -8,     /**< Feature not implemented */
    EV_ERROR_MEMORY_LIMIT_EXCEEDED = -9, /**< Memory limit exceeded */
    EV_ERROR_UNSUPPORTED_BACKEND = -10, /**< Backend not supported on this platform */
    EV_ERROR_UNKNOWN = -999            /**< Unknown error */
} ev_error_t;
/* ============================================================================
 * Thread Safety & Lock Ordering
 * =========================================================================
 *
 * The C API is thread-safe. Functions that mutate context state acquire
 * internal mutexes. Read-only accessors on immutable state (e.g., model
 * metadata set at init time) may skip locking.
 *
 * **Lock ordering** (always acquire in this order to prevent deadlock):
 *   1. ev_stream::mutex   (stream-level, acquired first)
 *   2. ev_context::mutex  (context-level, acquired second)
 *
 * ev_stream_next() acquires stream->mutex then ctx->mutex (nested).
 * ev_generate() acquires only ctx->mutex.
 * ev_embed() acquires only ctx->mutex.
 *
 * Direct C API consumers (Swift, Kotlin, etc.) must NOT hold ctx->mutex
 * then acquire stream->mutex — this inverts the ordering and deadlocks.
 *
 * The Dart SDK serializes all commands through isolate SendPort/ReceivePort,
 * so lock ordering is not observable from Dart.
 * ========================================================================= */

/* ============================================================================
 * Context Management
 * ========================================================================= */

/**
 * @brief Opaque context handle for Edge Veda inference engine
 */
typedef struct ev_context_impl* ev_context;
/* ============================================================================
 * Streaming Generation
 * ========================================================================= */

/**
 * @brief Opaque stream handle for streaming generation
 */
typedef struct ev_stream_impl* ev_stream;
/* ============================================================================
 * Embeddings API
 * ========================================================================= */

/**
 * @brief Result of text embedding operation
 */
typedef struct {
    float* embeddings;    /**< Embedding vector (caller must free with ev_free_embeddings()) */
    int dimensions;       /**< Number of dimensions (n_embd) */
    int token_count;      /**< Number of tokens in input text */
} ev_embed_result;
/**
 * @brief Compute text embeddings
 *
 * Generates an embedding vector for the input text using the loaded model.
 * The caller must free the result with ev_free_embeddings().
 *
 * @param ctx Context handle
 * @param text Input text to embed
 * @param result Pointer to result structure to fill
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_embed(
    ev_context ctx,
    const char* text,
    ev_embed_result* result
);
/**
 * @brief Free embedding result
 *
 * Frees the embeddings array allocated by ev_embed().
 *
 * @param result Pointer to result structure to free
 */
EV_API void ev_free_embeddings(ev_embed_result* result);
/* ============================================================================
 * Streaming Token Info (confidence scoring)
 * ========================================================================= */

/**
 * @brief Extended token information from streaming generation
 */
typedef struct {
    float confidence;        /**< Token confidence score (0.0-1.0), -1.0 if not computed */
    float avg_confidence;    /**< Running average confidence across all tokens */
    bool needs_cloud_handoff; /**< True when avg confidence drops below threshold */
    int token_index;         /**< Token position in generated sequence */
} ev_stream_token_info;
/**
 * @brief Get extended token information from current stream position
 *
 * Returns confidence scoring and cloud handoff information for the
 * most recently generated token in the stream.
 *
 * @param stream Stream handle
 * @param info Pointer to info structure to fill
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_stream_get_token_info(
    ev_stream stream,
    ev_stream_token_info* info
);
/* ============================================================================
 * Whisper API (STT - Speech-to-Text)
 * ========================================================================= */

/**
 * @brief Opaque context handle for Edge Veda whisper (speech-to-text) engine
 *
 * Whisper context is SEPARATE from text context (ev_context) and
 * vision context (ev_vision_context).
 * Create with ev_whisper_init(), free with ev_whisper_free().
 */
typedef struct ev_whisper_context_impl* ev_whisper_context;
/**
 * @brief Configuration structure for initializing whisper context
 */
typedef struct {
    /** Path to Whisper GGUF model file */
    const char* model_path;

    /** Number of CPU threads (0 = auto-detect) */
    int num_threads;

    /** Use GPU acceleration (Metal on iOS/macOS) */
    bool use_gpu;

    /** Reserved for future use - must be NULL */
    void* reserved;
} ev_whisper_config;
/**
 * @brief Parameters for whisper transcription
 */
typedef struct {
    /** Number of threads for transcription (0 = use config default) */
    int n_threads;

    /** Language code: "en", "auto", etc. (NULL = "en") */
    const char* language;

    /** Translate to English (true = translate, false = transcribe) */
    bool translate;

    /** Reserved for future use - must be NULL */
    void* reserved;
} ev_whisper_params;
/**
 * @brief Result of a whisper transcription
 *
 * Contains an array of segments with timing information.
 * Must be freed with ev_whisper_free_result() after use.
 */
typedef struct {
    /** Array of transcription segments */
    ev_whisper_segment* segments;

    /** Number of segments in the array */
    int n_segments;

    /** Total processing time in milliseconds */
    double process_time_ms;
} ev_whisper_result;
/**
 * @brief Get default whisper configuration with recommended settings
 * @param config Pointer to config structure to fill
 */
EV_API void ev_whisper_config_default(ev_whisper_config* config);
/**
 * @brief Initialize whisper context with model
 *
 * Loads the Whisper model for speech-to-text transcription.
 * The whisper context is independent from text and vision contexts.
 *
 * @param config Whisper configuration (model_path required)
 * @param error Optional pointer to receive error code
 * @return Whisper context handle on success, NULL on failure
 */
EV_API ev_whisper_context ev_whisper_init(
    const ev_whisper_config* config,
    ev_error_t* error
);
/**
 * @brief Transcribe PCM audio samples to text
 *
 * Takes 16kHz mono float32 PCM samples and returns transcribed text
 * with segment-level timing information.
 * This is a blocking call that returns the complete transcription.
 *
 * @param ctx Whisper context handle
 * @param pcm_samples PCM audio data (16kHz, mono, float32, range [-1.0, 1.0])
 * @param n_samples Number of samples in pcm_samples array
 * @param params Transcription parameters (NULL = use defaults)
 * @param result Pointer to result structure to fill (caller must free with ev_whisper_free_result)
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_whisper_transcribe(
    ev_whisper_context ctx,
    const float* pcm_samples,
    int n_samples,
    const ev_whisper_params* params,
    ev_whisper_result* result
);
/**
 * @brief Free whisper transcription result
 *
 * Frees the segments array and associated text strings
 * allocated by ev_whisper_transcribe().
 *
 * @param result Pointer to result structure to free
 */
EV_API void ev_whisper_free_result(ev_whisper_result* result);
/**
 * @brief Free whisper context and release all resources
 * @param ctx Whisper context handle to free
 */
EV_API void ev_whisper_free(ev_whisper_context ctx);
/**
 * @brief Check if whisper context is valid and ready for transcription
 * @param ctx Whisper context handle
 * @return true if valid and model is loaded, false otherwise
 */
EV_API bool ev_whisper_is_valid(ev_whisper_context ctx);
/* ============================================================================
 * Image Generation API (Text-to-Image via Stable Diffusion)
 * ========================================================================= */

/**
 * @brief Opaque context handle for Edge Veda image generation engine
 *
 * Image generation context is SEPARATE from text (ev_context), vision
 * (ev_vision_context), and whisper (ev_whisper_context) contexts.
 * Create with ev_image_init(), free with ev_image_free().
 */
typedef struct ev_image_context_impl* ev_image_context;
/**
 * @brief Configuration for initializing image generation context
 */
typedef struct {
    const char* model_path;      /**< Path to SD GGUF model file */
    int num_threads;             /**< CPU threads (0 = auto) */
    bool use_gpu;                /**< Metal on iOS/macOS */
    int wtype;                   /**< Weight type override (-1 = auto from GGUF) */
    void* reserved;
} ev_image_config;
/**
 * @brief Parameters for image generation
 */
typedef struct {
    const char* prompt;            /**< Text prompt describing desired image */
    const char* negative_prompt;   /**< Negative prompt (NULL = "") */
    int width;                     /**< Image width in pixels (default 512) */
    int height;                    /**< Image height in pixels (default 512) */
    int steps;                     /**< Number of inference steps (default 4 for turbo) */
    float cfg_scale;               /**< Classifier-free guidance scale (default 1.0 for turbo) */
    int64_t seed;                  /**< Random seed (-1 = random) */
    ev_image_sampler_t sampler;    /**< Sampler type (default EULER_A) */
    ev_image_schedule_t schedule;  /**< Schedule type (default DEFAULT) */
    void* reserved;
} ev_image_gen_params;
/**
 * @brief Result of image generation
 *
 * Contains raw RGB pixel data. Caller must free with ev_image_free_result().
 */
typedef struct {
    uint8_t* data;       /**< Raw pixel data (RGB, width * height * 3) */
    uint32_t width;      /**< Image width */
    uint32_t height;     /**< Image height */
    uint32_t channels;   /**< Number of channels (3 for RGB) */
    size_t data_size;    /**< Total bytes in data */
} ev_image_result;
/**
 * @brief Progress callback for image generation
 */
typedef void (*ev_image_progress_cb)(int step, int total_steps, float elapsed_s, void* user_data);
/**
 * @brief Get default image generation configuration
 * @param config Pointer to config structure to fill
 */
EV_API void ev_image_config_default(ev_image_config* config);
/**
 * @brief Get default image generation parameters
 * @param params Pointer to parameters structure to fill
 */
EV_API void ev_image_gen_params_default(ev_image_gen_params* params);
/**
 * @brief Initialize image generation context with SD model
 *
 * Loads the Stable Diffusion model for text-to-image generation.
 * The image context is independent from text, vision, and whisper contexts.
 *
 * @param config Image generation configuration (model_path required)
 * @param error Optional pointer to receive error code
 * @return Image context handle on success, NULL on failure
 */
EV_API ev_image_context ev_image_init(const ev_image_config* config, ev_error_t* error);
/**
 * @brief Free image generation context and release all resources
 * @param ctx Image context handle to free
 */
EV_API void ev_image_free(ev_image_context ctx);
/**
 * @brief Check if image generation context is valid and ready
 * @param ctx Image context handle
 * @return true if valid and model is loaded, false otherwise
 */
EV_API bool ev_image_is_valid(ev_image_context ctx);
/**
 * @brief Set progress callback for image generation
 *
 * The callback is invoked on each denoising step during generation.
 *
 * @param ctx Image context handle
 * @param cb Progress callback function (NULL to unregister)
 * @param user_data User data to pass to callback
 */
EV_API void ev_image_set_progress_callback(ev_image_context ctx, ev_image_progress_cb cb, void* user_data);
/**
 * @brief Generate an image from a text prompt
 *
 * This is a blocking call that runs the full diffusion pipeline:
 * CLIP text encoding -> noise scheduling -> iterative denoising -> VAE decode.
 * Use ev_image_set_progress_callback() for step-by-step progress updates.
 *
 * @param ctx Image context handle
 * @param params Generation parameters (prompt required)
 * @param result Pointer to result structure to fill (caller must free with ev_image_free_result)
 * @return Error code (EV_SUCCESS on success)
 */
EV_API ev_error_t ev_image_generate(ev_image_context ctx, const ev_image_gen_params* params, ev_image_result* result);
/**
 * @brief Free image generation result
 *
 * Frees the pixel data allocated by ev_image_generate().
 *
 * @param result Pointer to result structure to free
 */
EV_API void ev_image_free_result(ev_image_result* result);