flutter/lib/src/ffi/bindings.dart


    // Whisper functions
    evWhisperConfigDefault = _dylib.lookupFunction<
      EvWhisperConfigDefaultNative,
      EvWhisperConfigDefaultDart
    >('ev_whisper_config_default');
    evWhisperInit = _dylib
        .lookupFunction<EvWhisperInitNative, EvWhisperInitDart>(
          'ev_whisper_init',
        );
    evWhisperTranscribe = _dylib
        .lookupFunction<EvWhisperTranscribeNative, EvWhisperTranscribeDart>(
          'ev_whisper_transcribe',
        );
    evWhisperFreeResult = _dylib
        .lookupFunction<EvWhisperFreeResultNative, EvWhisperFreeResultDart>(
          'ev_whisper_free_result',
        );
    evWhisperFree = _dylib
        .lookupFunction<EvWhisperFreeNative, EvWhisperFreeDart>(
          'ev_whisper_free',
        );
    evWhisperIsValid = _dylib
        .lookupFunction<EvWhisperIsValidNative, EvWhisperIsValidDart>(
          'ev_whisper_is_valid',
        );

    // Embedding functions
    evEmbed = _dylib.lookupFunction<EvEmbedNative, EvEmbedDart>('ev_embed');
    evFreeEmbeddings = _dylib
        .lookupFunction<EvFreeEmbeddingsNative, EvFreeEmbeddingsDart>(
          'ev_free_embeddings',
        );

    // Streaming confidence
    evStreamGetTokenInfo = _dylib
        .lookupFunction<EvStreamGetTokenInfoNative, EvStreamGetTokenInfoDart>(
          'ev_stream_get_token_info',
        );

    // Image generation functions
    evImageConfigDefault = _dylib
        .lookupFunction<EvImageConfigDefaultNative, EvImageConfigDefaultDart>(
          'ev_image_config_default',
        );
    evImageGenParamsDefault = _dylib.lookupFunction<
      EvImageGenParamsDefaultNative,
      EvImageGenParamsDefaultDart
    >('ev_image_gen_params_default');
    evImageInit = _dylib.lookupFunction<EvImageInitNative, EvImageInitDart>(
      'ev_image_init',
    );
    evImageFree = _dylib.lookupFunction<EvImageFreeNative, EvImageFreeDart>(
      'ev_image_free',
    );
    evImageIsValid = _dylib
        .lookupFunction<EvImageIsValidNative, EvImageIsValidDart>(
          'ev_image_is_valid',
        );
    evImageSetProgressCallback = _dylib.lookupFunction<
      EvImageSetProgressCallbackNative,
      EvImageSetProgressCallbackDart
    >('ev_image_set_progress_callback');
    evImageGenerate = _dylib
        .lookupFunction<EvImageGenerateNative, EvImageGenerateDart>(
          'ev_image_generate',
        );
    evImageFreeResult = _dylib
        .lookupFunction<EvImageFreeResultNative, EvImageFreeResultDart>(
          'ev_image_free_result',
        );
  }
}
